--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "0.3.0",
     "description": "Inforg landpage.",
     "scripts": {
-        "docs:dev": "vitepress dev ./",
-        "docs:build": "vitepress build ./"
+        "main:dev": "vitepress dev ./",
+        "main:build": "vitepress build ./"
     },
     "keywords": [
         "inforg",
