--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
-    "name": "inforg-landpage",
-    "version": "0.5.0",
-    "description": "Inforg landpage.",
-    "scripts": {
-        "main:dev": "vitepress dev ./",
-        "main:build": "vitepress build ./"
-    },
-    "keywords": [
-        "inforg",
-        "landpage"
-    ],
-    "author": "Inforg <contact@inforg.dev> (https://inforg.dev)",
-    "contributors": [
-        "Luis Float <contact@luisfloat.com> (https://luisfloat.com)"
-    ],
-    "homepage": "https://github.com/inforgdev/inforgdev.github.io",
-    "repo": "github:inforgdev/inforgdev.github.io",
-    "bugs": "https://github.com/inforgdev/inforgdev.github.io/issues",
-    "license": "SEE LICENSE IN LICENSE.md",
-    "dependencies": {
-        "axios": "^1.2.5",
-        "sass": "^1.57.1",
-        "vitepress": "^1.0.0-alpha.40",
-        "vue": "^3.2.45"
-    }
+  "devDependencies": {
+    "sass": "^1.80.6",
+    "unocss": "^0.63.6",
+    "vitepress": "^1.4.3",
+    "vue": "^3.5.12"
+  },
+  "scripts": {
+    "dev": "vitepress dev",
+    "build": "vitepress build",
+    "preview": "vitepress preview"
+  },
+  "dependencies": {
+    "axios": "^1.7.7"
+  }
 }
