--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,21 +32,20 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Not needed if lastUpdated is not enabled
-      # - uses: pnpm/action-setup@v3 # Uncomment this block if you're using pnpm
-      #   with:
-      #     version: 9 # Not needed if you've set "packageManager" in package.json
-      # - uses: oven-sh/setup-bun@v1 # Uncomment this if you're using Bun
+      - uses: pnpm/action-setup@v3 # Use pnpm setup action
+        with:
+          version: 9 # Specify the version of PNPM to use
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm # or pnpm / yarn
+          cache: 'pnpm' # Cache pnpm dependencies
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: npm ci # or pnpm install / yarn install / bun install
+        run: pnpm install # Use pnpm to install dependencies
       - name: Build with VitePress
-        run: npm run build # or pnpm build / yarn build / bun run build
+        run: pnpm build # Use pnpm to build the project
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
