--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
+  "type": "module",
   "devDependencies": {
-    "sass": "^1.80.6",
+    "sass": "^1.89.2",
     "unocss": "^0.63.6",
-    "vitepress": "^1.4.3",
-    "vue": "^3.5.12"
+    "vitepress": "^1.6.3",
+    "vue": "^3.5.17"
   },
   "scripts": {
     "dev": "vitepress dev",
@@ -11,6 +12,6 @@
     "preview": "vitepress preview"
   },
   "dependencies": {
-    "axios": "^1.7.7"
+    "axios": "^1.10.0"
   }
 }
